Fix log overflow and refine click behavior handling
- Resolved excessive log entries by removing redundant logging in map interactions.
- Improved handling of clicks on regions without facilities by hiding the sidebar, maintaining visibility of state markers, and adjusting zoom levels appropriately.
- Ensured consistent behavior for clicks outside regions or states.
- Enhanced code readability and maintainability for event handlers and region interactions.

--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,6 @@ body {
     height: 100%;
     z-index: 1;
     background-color: #f4f4f4;
-
-    /* width: 100%;
-    height: 100vh; */
 }
 
 .mapboxgl-ctrl-top-right {
@@ -73,13 +70,6 @@ button:hover {
     background: linear-gradient(145deg, #ff8502, #ff8502);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
 }
-
-/* .mapboxgl-ctrl-geocoder .mapboxgl-ctrl-geocoder--icon {
-    top: 0px;
-   margin: -2px;
-   position: relative;
-} */
-
 
 /* Flip Button Container */
 .flip-button {
@@ -227,12 +217,6 @@ button:hover {
     padding-right: 6px;
     background-color: #0f2844;
 }
-
-/* .mapbox-button-group .fit-to-canada {
-    background-image: url('./img/canada_flag.png');
-    background-position: left center;
-    padding-right: 6px;
-} */
 
 .mapbox-button-group #fly-to-aruba .flip-front {
     background-image: url('./img/aruba_flag.png');
